# MSPR1.EPSI-FastAPI

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 74858962b483_initial_schema.py  a1f4c2d9e8b7_add_workout_types_table.py
docs/: QUICKSTART.md  README.md  endpoints.md  pytest.md
src/: app.py  auth.py  database.py  schemas.py
src/etl/: publisher.py  schemas.py  worker.py
src/etl/consumers/: daily_food_consumer.py  diet_rec_consumer.py  exercise_consumer.py  workout_type_consumer.py
src/models/: __init__.py  biometrics_log.py  equipment.py  meal_log.py  product.py  user.py  workout_session.py  workout_type.py
src/router/: __init__.py  biometrics_log.py  equipment.py  etl.py  exports.py  meal_log.py  product.py  user.py  workout_session.py  workout_type.py
src/test/: conftest.py  test_analytics.py  test_biometrics_log.py  test_equipment.py  test_exports.py  test_meal_log.py  test_product.py  test_user.py  test_workout_session.py  test_workout_type.py
