[project]
name = "mspr1-epsi-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "python-jose>=3.5.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.25.0",
]
